Ensure proper session cleanup on failed trace capture for native allocations.
Summary of changes:
Improved session cleanup and error messaging.
Few idiomatic fixes.

Bug: 454780116
Test: MainMemoryProfilerStageTest.java
Change-Id: I04c63cfeda2f75abf3943b432e974b68bb217a8a

GitOrigin-RevId: 61f754bbd33f1466746cc2f4f6d80c2c4d6ad1fe

Space-RevId: 3086a443247b67e9048a23afa18d2c88061b7e95
(cherry picked from commit 6e8056dddb33d4a6d149ed029b41554f7b94d6bd)